# VaGuard

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  db.rs  lib.rs  main.rs  sync.rs
src/components/: ConfirmDialog.tsx  ContextMenu.tsx  EntryForm.tsx  PasswordGenerator.tsx  SettingsPanel.tsx  SyncPanel.tsx  Titlebar.tsx  UnlockScreen.tsx  VaultList.tsx
src/i18n/: en.ts  es.ts  index.ts
